--- a/variables.yml
+++ b/variables.yml
@@ -34,6 +34,7 @@ dbserver_wan_gateway: 192.168.0.1
 
 # Nginx vars:
 nginx_odoo_domain: "*.midominio.do"
+nginx_cache_dir: /cache
 
 # PostgreSQL vars:
 db_storage_tablespace: /db_storage/tbsp_data_1
