--- a/includes/nginx.yml
+++ b/includes/nginx.yml
@@ -12,7 +12,7 @@
         - accept_mutex off
         - multi_accept on
       nginx_worker_processes: auto
-      nginx_worker_rlimit_nofile: 40000
+      nginx_worker_rlimit_nofile: 60000
       nginx_http_params:
         - sendfile on
         - sendfile_max_chunk 512k
@@ -48,7 +48,7 @@
           - gzip_comp_level 6
           - gzip_buffers 16 8k
           - gzip_http_version 1.1
-          - gzip_types text/plain text/css application/json application/javascript  text/xml application/xml application/xml+rss text/javascript
+          - gzip_types text/plain text/css application/json application/javascript text/xml application/xml application/xml+rss text/javascript
           - gzip_min_length 10240
  
         proxy:
@@ -89,7 +89,41 @@
     - name: Load Nginx Odoo Variables
       include_vars: ../variables.yml
 
+    - name: Add HugePages group
+      group:
+        gid: 9999
+        name: hugepages
+        state: present
+
   post_tasks:
+    - name: Joining WWW user to HugePages group
+      user: name=www-data groups=hugepages append=yes
+
+    - name: Create pam_limits and sysctl files
+      file:
+        path: "{{ item.filename }}"
+        state: touch
+        mode: 0644
+      with_items:
+        - { filename: "/etc/sysctl.d/30-nginx-shm.conf" }
+        - { filename: "/etc/sysctl.d/31-network-tcp-tuning.conf" }
+        - { filename: "/etc/security/limits.d/99-nginx.conf" }
+
+    - name: /etc/security/limits.conf configuration
+      pam_limits:
+        domain: "{{ item.domain }}"
+        limit_type: "{{ item.limit_type }}"
+        limit_item: "{{ item.limit_item }}"
+        value: "{{ item.value }}"
+        dest: /etc/security/limits.d/99-nginx.conf
+      with_items:
+        - { domain: "*",          limit_type: "soft", limit_item: "stack",   value: "819200" }
+        - { domain: "*",          limit_type: "hard", limit_item: "stack",   value: "819200" }
+        - { domain: "www-data",   limit_type: "soft", limit_item: "nofile",  value: "65535" }
+        - { domain: "www-data",   limit_type: "hard", limit_item: "nofile",  value: "65535" }
+        - { domain: "@hugepages", limit_type: "soft", limit_item: "memlock", value: "unlimited" }
+        - { domain: "@hugepages", limit_type: "hard", limit_item: "memlock", value: "unlimited" }
+
     - name: Creating cache directory for static files
       file:
         path: "{{ nginx_cache_dir }}"
@@ -113,6 +147,51 @@
         fstype: tmpfs
         opts: "rw,nodev,noexec,noatime,size=1048576k,mode=777"
         state: mounted
+
+    - name: Sysctl tuning for Nginx
+      sysctl:
+        name: "{{ item.name }}"
+        value: "{{ item.value }}"
+        sysctl_file: /etc/sysctl.d/30-nginx-shm.conf
+        state: present
+        reload: yes
+      with_items:
+        - { name: "vm.overcommit_memory", value: "2" }
+        - { name: "vm.nr_hugepages", value: "148" }
+        - { name: "vm.hugetlb_shm_group", value: "9999" }
+        - { name: "vm.hugepages_treat_as_movable", value: "0" }
+        - { name: "vm.nr_overcommit_hugepages", value: "64" }
+        - { name: "fs.file-max", value: "81920" }
+
+    - name: Sysctl tuning for TCP/IP Stack
+      sysctl:
+        name: "{{ item.name }}"
+        value: "{{ item.value }}"
+        sysctl_file: /etc/sysctl.d/31-network-tcp-tuning.conf
+        state: present
+        reload: yes
+      with_items:
+        - { name: "net.ipv4.ip_local_port_range", value: "1024 65535" }
+        - { name: "net.ipv4.tcp_tw_recycle", value: "1" }
+        - { name: "net.ipv4.tcp_tw_reuse", value: "1" }
+        - { name: "net.ipv4.tcp_max_tw_buckets", value: "1440000" }
+        - { name: "net.ipv4.tcp_fin_timeout", value: "7" }
+        - { name: "net.ipv4.tcp_slow_start_after_idle", value: "0" }
+        - { name: "net.ipv4.tcp_window_scaling", value: "1" }
+        - { name: "net.ipv4.tcp_max_syn_backlog", value: "3240000" }
+        - { name: "net.core.rmem_max", value: "16777216" }
+        - { name: "net.core.wmem_max", value: "16777216" }
+        - { name: "net.core.somaxconn", value: "65535" }
+        - { name: "net.core.netdev_max_backlog", value: "2500" }
+        - { name: "net.ipv4.tcp_rmem", value: "4096 87380 16777216" }
+        - { name: "net.ipv4.tcp_wmem", value: "4096 65536 16777216" }
+        - { name: "net.ipv4.tcp_syn_retries", value: "1" }
+        - { name: "net.ipv4.tcp_synack_retries", value: "1" }
+        - { name: "net.ipv4.tcp_keepalive_time", value: "15" }
+        - { name: "net.ipv4.tcp_keepalive_intvl", value: "1" }
+        - { name: "net.ipv4.tcp_keepalive_probes", value: "2" }
+        - { name: "kernel.sched_migration_cost_ns", value: "5000000" }
+        - { name: "kernel.sched_autogroup_enabled", value: "0" }
 
     - name: Restarting Nginx
       service:
