--- a/includes/postgres.yml
+++ b/includes/postgres.yml
@@ -45,12 +45,13 @@
         mode: 0644
       with_items:
         - { filename: "/etc/sysctl.d/30-postgresql-shm.conf" }
+        - { filename: "/etc/sysctl.d/31-network-tcp-tuning.conf" }
         - { filename: "/etc/security/limits.d/99-postgres.conf" }
 
     - name: Joining Postgres user to HugePages group
       user: name=postgres groups=hugepages append=yes
 
-    - name: Sysctl tuning
+    - name: Sysctl tuning for PostgreSQL
       sysctl:
         name: "{{ item.name }}"
         value: "{{ item.value }}"
@@ -63,6 +64,36 @@
         - { name: "vm.hugetlb_shm_group", value: "9999" }
         - { name: "vm.hugepages_treat_as_movable", value: "0" }
         - { name: "vm.nr_overcommit_hugepages", value: "64" }
+
+    - name: Sysctl tuning for TCP/IP Stack
+      sysctl:
+        name: "{{ item.name }}"
+        value: "{{ item.value }}"
+        sysctl_file: /etc/sysctl.d/31-network-tcp-tuning.conf
+        state: present
+        reload: yes
+      with_items:
+        - { name: "net.ipv4.ip_local_port_range", value: "1024 65535" }
+        - { name: "net.ipv4.tcp_tw_recycle", value: "1" }
+        - { name: "net.ipv4.tcp_tw_reuse", value: "1" }
+        - { name: "net.ipv4.tcp_max_tw_buckets", value: "1440000" }
+        - { name: "net.ipv4.tcp_fin_timeout", value: "7" }
+        - { name: "net.ipv4.tcp_slow_start_after_idle", value: "0" }
+        - { name: "net.ipv4.tcp_window_scaling", value: "1" }
+        - { name: "net.ipv4.tcp_max_syn_backlog", value: "3240000" }
+        - { name: "net.core.rmem_max", value: "16777216" }
+        - { name: "net.core.wmem_max", value: "16777216" }
+        - { name: "net.core.somaxconn", value: "65535" }
+        - { name: "net.core.netdev_max_backlog", value: "2500" }
+        - { name: "net.ipv4.tcp_rmem", value: "4096 87380 16777216" }
+        - { name: "net.ipv4.tcp_wmem", value: "4096 65536 16777216" }
+        - { name: "net.ipv4.tcp_syn_retries", value: "1" }
+        - { name: "net.ipv4.tcp_synack_retries", value: "1" }
+        - { name: "net.ipv4.tcp_keepalive_time", value: "15" }
+        - { name: "net.ipv4.tcp_keepalive_intvl", value: "1" }
+        - { name: "net.ipv4.tcp_keepalive_probes", value: "2" }
+        - { name: "kernel.sched_migration_cost_ns", value: "5000000" }
+        - { name: "kernel.sched_autogroup_enabled", value: "0" }
 
     - name: /etc/security/limits.conf configuration
       pam_limits:
